--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,16 +1,15 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "module": "ESNext",
-      "jsx": "react-jsx",
       "declaration": true,
-      "declarationDir": "dist",
       "emitDeclarationOnly": true,
       "outDir": "dist",
+      "module": "ESNext",
       "moduleResolution": "node",
+      "target": "ES6",
+      "strict": true,
       "esModuleInterop": true,
-      "skipLibCheck": true,
-      "strict": true
+      "skipLibCheck": true
     },
     "include": ["src"]
-  }  
+  }
+  
