--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ui": "*",
+    "@repo/ui": "*",
     "types": "*"
   },
   "devDependencies": {
