--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,15 +5,23 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/cli": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.4",
+    "clsx": "^2.1.1",
+    "motion": "^12.7.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@types/react": "^19.1.1",
