--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  
     "compilerOptions": {
       "target": "ES6",
       "module": "ESNext",
@@ -10,7 +11,10 @@
       "moduleResolution": "node",
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "strict": true
+      "strict": true,
+      "paths": {
+        "@/*": ["./*"]
+      }
     },
     "include": ["src"]
   }  
